return collection instead of iterator when directive evaluate to n values